force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/CHANNEL_ORDERS__Service_Order__c.object-meta.xml
<CustomObject>
    <label>Service Order</label>
    <nameField>
        <displayFormat>SO-{00000000}</displayFormat>
        <label>Service Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>