force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Cloned_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Cloned_Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service order the record was cloned from.</description>
    <label>Cloned Service Order</label>
    <referenceTo>CHANNEL_ORDERS__Service_Order__c</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Clone_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>