force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Created_with_new_COA__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Created_with_new_COA__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This represents the Service Order record being created with a COA version higher than 1.17.</description>
    <label>Created with new COA</label>
    <type>Checkbox</type>
</CustomField>