force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Date_Partner_Received_Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Date_Partner_Received_Customer_Order__c</fullName>
    <label>Date Partner Received Customer Order</label>
    <type>Date</type>
</CustomField>