force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Error_Comment__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Error_Comment__c</fullName>
    <label>Error Comment</label>
    <type>TextArea</type>
</CustomField>