force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Order_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Order_Total_Value__c</fullName>
    <label>Order Value</label>
    <summarizedField>CHANNEL_ORDERS__Service_Order_Detail__c.CHANNEL_ORDERS__Order_Detail_Value__c</summarizedField>
    <summaryForeignKey>CHANNEL_ORDERS__Service_Order_Detail__c.CHANNEL_ORDERS__Partner_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>