force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Org_Edition_Type__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Org_Edition_Type__c</fullName>
    <label>Org Edition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>