force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Partner_Contract_Rules__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Partner_Contract_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>CHANNEL_ORDERS__Partner_Contract_Terms__c</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>