force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Processed_By_AutoRenew__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Processed_By_AutoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to keep track of those orders that where processed by the COA_ProcessDetailsAutoRenewBatch batch</description>
    <label>Processed By AutoRenew</label>
    <type>Checkbox</type>
</CustomField>