force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to all opportunities in the org
User selects one opportunity which is stored on the Service Order</description>
    <inlineHelpText>Lookup to all opportunities in the org, you can select one opportunity which is stored on the Service Order.</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>