force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Submitted_From_UI__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Submitted_From_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the Order was submitted via the UI.</description>
    <label>Submitted From UI</label>
    <type>Checkbox</type>
</CustomField>